Update For New Updates (#42)
* Update Go Version
* Update For New Updates
